--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 		<title>Miniport by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="index.js"></script>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -54,51 +53,49 @@
 						<p id='about-apps'>Here you can find my linguistic web apps. Volga German Digitization is a site I built for the Kansas Humanities Council. It features a Python-powered cgi backend for a Volga German dictionary. I built the other apps as part of Thinkful's full stack curriculum. Gloss Maker is a RESTful API for the Yandex translation service. The other two apps have their own backends. Language Analyzer is powered by Node.JS and MongoDB, while Spanish Verb Conjugator by Python's Flask and PostgreSQL. Language Analyzer scrapes the content of a wesbite and returns a summary of basic NLP statistics for it. Spanish Verb Conjugator helps you learn Spanish verbs and their conjugations.</p>
 					</header>
 					<div class="container" id="projects">
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
+						<div class="my_row">
+							<div class="image-holder">
+								<div class="box style1">
 										<a  href="http://spanish-conj.herokuapp.com/login">
-											<img src="images/spanish_login.png" alt="" >
+											<img src="images/spanish_app.png" alt="" >
 										</a>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
+									<h3>Spanish Verb Conjugator</h3>
+									<p>Learn Spanish verbs and their conjugations</p>
+								</div>
 							</div>
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
+							<div class="image-holder">
+								<div class="box style1">
 										<a  href="http://spanish-conj.herokuapp.com/login">
-											<img src="images/spanish_login.png" alt="" >
+											<img src="images/language_analyzer.png" alt="" >
 										</a>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-						</div>
-						<div class="row">
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-										<a  href="http://spanish-conj.herokuapp.com/login">
-											<img src="images/spanish_login.png" alt="" >
-										</a>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
-							</div>
-							<div class="4u 12u(mobile)">
-								<section class="box style1">
-										<a  href="http://spanish-conj.herokuapp.com/login">
-											<img src="images/spanish_login.png" alt="" >
-										</a>
-									<h3>Consequat lorem</h3>
-									<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
-								</section>
+									<h3>Language Analyzer</h3>
+									<p>Get basic text analytics for a webpage</p>
+								</div>
 							</div>
 						</div>
+
+						<div class="my_row">
+							<div class="image-holder">
+								<div class="box style1">
+										<a  href="http://spanish-conj.herokuapp.com/login">
+											<img src="images/glossmaker.png" alt="" >
+										</a>
+									<h3>Spanish Verb Conjugator</h3>
+									<p>Learn Spanish verbs and their conjugations</p>
+								</div>
+							</div>
+							<div class="image-holder">
+								<div class="box style1">
+										<a  href="http://spanish-conj.herokuapp.com/login">
+											<img src="images/volga_german.png" alt="" >
+										</a>
+									<h3>Language Analyzer</h3>
+									<p>Get basic text analytics for a webpage</p>
+								</div>
+							</div>
+						</div>
+
 					</div>
-					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button big scrolly">See some of my recent work</a>
-					</footer>
 				</article>
 			</div>
 
@@ -106,11 +103,11 @@
 			<div class="wrapper style3">
 				<article id="portfolio">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
+						<h2>NLP code samples</h2>
+						<!-- <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p> -->
 					</header>
 					<div class="container">
-						<div class="row">
+						<div class="my_row">
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
 									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
@@ -127,40 +124,20 @@
 							</div>
 							<div class="4u 12u(mobile)">
 								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/volga_german.png" alt="" /></a>
 									<h3><a href="#">Lorem ipsum</a></h3>
 									<p>Ornare nulla proin odio consequat.</p>
 								</article>
 							</div>
 						</div>
 						<div class="row">
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Tempus dolore</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-									<h3><a href="#">Feugiat aliquam</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-									<h3><a href="#">Sed amet ornare</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
+
 						</div>
 					</div>
-					<footer>
+					<!-- <footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
 						<a href="#contact" class="button big scrolly">Get in touch with me</a>
-					</footer>
+					</footer> -->
 				</article>
 			</div>
 
@@ -174,7 +151,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form method="post" action="https://email-contact-form.herokuapp.com/contact">
+								<form id="contact" method="post" action="https://email-contact-form.herokuapp.com/contact">
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
@@ -232,7 +209,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/skel-viewport.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
