--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<form id="contact" method="post" action="https://email-contact-form.herokuapp.com/contact">
+								<form id="contact" method="post">
+								<!-- <form id="contact" method="post" action="https://email-contact-form.herokuapp.com/contact"> -->
 									<div>
 										<div class="row">
 											<div class="6u 12u(mobile)">
