--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#web">Web Apps</a></li>
+					<li><a href="#nlp">NLP scripts</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -35,7 +35,8 @@
 							</div>
 							<div class="8u 12u(mobile)">
 								<header>
-									<h1>Hi. I'm <strong>Yuri Yerastov</strong>.</h1>
+									<h1><strong>Yuri Yerastov</strong></h1>
+									<h2>Software engineering portfolio </h2>
 								</header>
 			          <p>
 			            I am a professional linguist with experience in software engineering and natural language processing (NLP). Formerly a university professor, I developed a passion for technology when I was involved in a number of technical projects in academia: I mined dialect data from online mass media, developed an online dictionary for a project funded the Kansas Humanities Council, and built a digital infrastructure for the Writing Center at Fort Hays State University. Working on those projects, I learned all things Python from NLP to statistics to database management to web apps. To deepen my understanding of software engineering, I completed a full stack curriculum at Thinkful, with a focus on Javascript, jQuery, AJAX, RESTful APIs, Node.js, Flask, MongoDB, and PostgreSQL. Most recently, I have worked for Facebook as a computational linguist. I am now open for new opportunities in software engineering and/or natural language processing.
@@ -46,9 +47,9 @@
 				</article>
 			</div>
 
-		<!-- Work -->
+		<!-- Web-->
 			<div class="wrapper style2">
-				<article id="work">
+				<article id="web">
 					<header>
 						<h2>My Web Applications</h2>
 						<p id='about-apps'>Here you can find my linguistic web apps. Volga German Digitization is a site I built for the Kansas Humanities Council. It features a Python-powered cgi backend for a Volga German dictionary. I built the other apps as part of Thinkful's full stack curriculum. Gloss Maker is a RESTful API for the Yandex translation service. The other two apps have their own backends. Language Analyzer is powered by Node.JS and MongoDB, while Spanish Verb Conjugator by Python's Flask and PostgreSQL. Language Analyzer scrapes the content of a wesbite and returns a summary of basic NLP statistics for it. Spanish Verb Conjugator helps you learn Spanish verbs and their conjugations.</p>
@@ -61,16 +62,24 @@
 											<img src="images/spanish_app.png" alt="" >
 										</a>
 									<h3>Spanish Verb Conjugator</h3>
-									<p>Learn Spanish verbs and their conjugations</p>
+									<div>Learn Spanish verbs and their conjugations</div>
+									<div class='source-code'>
+										<a href="http://spanish-conj.herokuapp.com/login">live site</a> |
+	             			<a href="https://github.com/yuriSF/spanish_conjugator">source code</a>
+									</div>
 								</div>
 							</div>
 							<div class="image-holder">
 								<div class="box style1">
-										<a  href="http://spanish-conj.herokuapp.com/login">
+										<a  href="http://language-analyzer.herokuapp.com/">
 											<img src="images/language_analyzer.png" alt="" >
 										</a>
 									<h3>Language Analyzer</h3>
-									<p>Get basic text analytics for a webpage</p>
+									<div>Get basic text analytics for a webpage</div>
+									<div class='source-code'>
+				            <a href="http://language-analyzer.herokuapp.com/">live site</a> |
+				            <a href="https://github.com/yuriSF/nlp_project">source code</a>
+				          </div>
 								</div>
 							</div>
 						</div>
@@ -78,20 +87,28 @@
 						<div class="my_row">
 							<div class="image-holder">
 								<div class="box style1">
-										<a  href="http://spanish-conj.herokuapp.com/login">
+										<a  href="http://yerastov.fhsu.edu/gloss/">
 											<img src="images/glossmaker.png" alt="" >
 										</a>
 									<h3>Spanish Verb Conjugator</h3>
-									<p>Learn Spanish verbs and their conjugations</p>
+									<div>Create word-for-word translations of a text</div>
+									<div class='source-code'>
+				            <a href="http://language-analyzer.herokuapp.com/">live site</a> |
+				            <a href="https://github.com/yuriSF/gloss">source code</a>
+				          </div>
 								</div>
 							</div>
 							<div class="image-holder">
 								<div class="box style1">
-										<a  href="http://spanish-conj.herokuapp.com/login">
+										<a  href="http://bigcat.fhsu.edu/volgagerman">
 											<img src="images/volga_german.png" alt="" >
 										</a>
 									<h3>Language Analyzer</h3>
-									<p>Get basic text analytics for a webpage</p>
+									<div>Get basic text analytics for a webpage</div>
+									<div class='source-code'>
+				            <a href="http://bigcat.fhsu.edu/volgagerman">live site</a> | 
+				            <a href="https://github.com/yuriSF/volga_german_web">source code</a>
+				          </div>
 								</div>
 							</div>
 						</div>
@@ -102,43 +119,37 @@
 
 		<!-- Portfolio -->
 			<div class="wrapper style3">
-				<article id="portfolio">
+				<article id="nlp">
 					<header>
-						<h2>NLP code samples</h2>
+						<h2>My NLP code samples</h2>
 						<!-- <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p> -->
 					</header>
-					<div class="container">
-						<div class="my_row">
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-									<h3><a href="#">Magna feugiat</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<h3><a href="#">Veroeros primis</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-							<div class="4u 12u(mobile)">
-								<article class="box style2">
-									<a href="#" class="image featured"><img src="images/volga_german.png" alt="" /></a>
-									<h3><a href="#">Lorem ipsum</a></h3>
-									<p>Ornare nulla proin odio consequat.</p>
-								</article>
-							</div>
-						</div>
-						<div class="row">
+					<div class="container" id='nlp-samples'>
+						<a class='nlp-projects' href='#'>
+							<h3>
+								Sentiment classification
+							</h3>
+							<p>
+								SVM classifier using scikit-learn and GloVe vectors
+							</p>
+						</a>
 
-						</div>
-					</div>
-					<!-- <footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#contact" class="button big scrolly">Get in touch with me</a>
-					</footer> -->
+						<a class='nlp-projects' href='#'>
+							<h3>
+								Data mining
+							</h3>
+							<p>
+								Web scraping, geocoding and statistical analysis
+							</p>
+						</a>
+						<a class='nlp-projects'href='#'>
+							<h3>
+								Corpus processing
+							</h3>
+							<p>
+								Corpus processing: syntactic and semantic parsing, WordNet, FrameNet, Word2Vec
+							</p>
+						</a>
 				</article>
 			</div>
 
@@ -190,13 +201,13 @@
 								<hr />
 								<h3>Find me on ...</h3>
 								<ul class="social">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+									<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
+									<li><a href="https://www.facebook.com/yerastov" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+									<li><a href="https://www.linkedin.com/in/yerastov/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<!-- <li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+									<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li> -->
+									<li><a href="https://github.com/yuriSF/" class="icon fa-github"><span class="label">Github</span></a></li>
 								</ul>
 								<hr />
 							</div>
