--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
 										<a  href="http://bigcat.fhsu.edu/volgagerman">
 											<img src="images/volga_german.png" alt="" >
 										</a>
-									<h3>Language Analyzer</h3>
+									<h3>Volga German Digitization</h3>
 									<div>Get basic text analytics for a webpage</div>
 									<div class='source-code'>
-				            <a href="http://bigcat.fhsu.edu/volgagerman">live site</a> | 
+				            <a href="http://bigcat.fhsu.edu/volgagerman">live site</a> |
 				            <a href="https://github.com/yuriSF/volga_german_web">source code</a>
 				          </div>
 								</div>
@@ -147,7 +147,7 @@
 								Corpus processing
 							</h3>
 							<p>
-								Corpus processing: syntactic and semantic parsing, WordNet, FrameNet, Word2Vec
+								Syntactic and semantic parsing, WordNet, FrameNet, Word2Vec
 							</p>
 						</a>
 				</article>
