--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Miniport by HTML5 UP</title>
+		<title>Yuri Yerastov's portfolio site</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -26,12 +21,11 @@
 				</ul>
 			</nav>
 
-		<!-- Home -->
 			<div class="wrapper style1 first">
 				<article class="container" id="top">
 					<div class="row">
 							<div class="4u 12u(mobile)">
-								<span class="image fit"><img src="images/yerastov.png" alt="" /></span>
+								<span class="image fit"><img src="images/yuri.png" alt="" /></span>
 							</div>
 							<div class="8u 12u(mobile)">
 								<header>
@@ -52,7 +46,7 @@
 				<article id="web">
 					<header>
 						<h2>My Web Applications</h2>
-						<p id='about-apps'>Here you can find my linguistic web apps. Volga German Digitization is a site I built for the Kansas Humanities Council. It features a Python-powered cgi backend for a Volga German dictionary. I built the other apps as part of Thinkful's full stack curriculum. Gloss Maker is a RESTful API for the Yandex translation service. The other two apps have their own backends. Language Analyzer is powered by Node.JS and MongoDB, while Spanish Verb Conjugator by Python's Flask and PostgreSQL. Language Analyzer scrapes the content of a wesbite and returns a summary of basic NLP statistics for it. Spanish Verb Conjugator helps you learn Spanish verbs and their conjugations.</p>
+						<p id='about-apps'>Here you can find my linguistic web apps. Volga German Digitization is a site I built for the Kansas Humanities Council. It features a Python-powered cgi backend for a Volga German dictionary. I built the other apps as part of <a href='http://www.thinkful.com'> Thinkful</a>'s  full stack curriculum. Gloss Maker is a RESTful API for the Yandex translation service. The other two apps have their own backends. Language Analyzer is powered by Node.JS and MongoDB, while Spanish Verb Conjugator by Python's Flask and PostgreSQL. Language Analyzer scrapes the content of a wesbite and returns a summary of basic NLP statistics for it. Spanish Verb Conjugator helps you learn Spanish verbs and their conjugations.</p>
 					</header>
 					<div class="container" id="projects">
 						<div class="my_row">
@@ -125,7 +119,7 @@
 						<!-- <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p> -->
 					</header>
 					<div class="container" id='nlp-samples'>
-						<a class='nlp-projects' href='#'>
+						<a class='nlp-projects' href='https://github.com/yuriSF/sentiment_class'>
 							<h3>
 								Sentiment classification
 							</h3>
@@ -134,7 +128,7 @@
 							</p>
 						</a>
 
-						<a class='nlp-projects' href='#'>
+						<a class='nlp-projects' href='https://github.com/yuriSF/dialect_project'>
 							<h3>
 								Data mining
 							</h3>
