--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 								Web scraping, geocoding and statistical analysis
 							</p>
 						</a>
-						<a class='nlp-projects'href='#'>
+						<a class='nlp-projects' href='https://github.com/yuriSF/nlp_scripts'>
 							<h3>
 								Corpus processing
 							</h3>
